# vk-pre-rotation-demo

./: .gitignore  .gitmodules  LICENSE  README  README.md
app/: CMakeLists.txt  build.gradle
app/glm/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: frag.glsl  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv  vert.glsl
app/src/main/cpp/: Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  Utils.h  VkHelper.cpp  VkHelper.h  main.cpp  vk_helper.cpp  vk_helper.h
gradle/wrapper/: gradle-wrapper.properties
